--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ rand = "0.3.15"
 
 [patch.crates-io]
 pnet = { git = "https://github.com/lossylife/libpnet", branch = "feature/maxium" }
+pnet_datalink = { git = "https://github.com/lossylife/libpnet", branch = "feature/maxium", path = "pnet_datalink" }
